2009-07-02  David King  <davidk@openismus.com>

	* hildon/hildon-animation-actor-private.h
	(HildonAnimationActorPrivate)
	* hildon/hildon-animation-actor.c (hildon_animation_actor_show)
	(hildon_animation_actor_hide)
	* hildon/hildon-animation-actor.h
	(hildon_animation_actor_set_show_full)
	(hildon_animation_actor_set_show): Change "show" parameter type from
	gint to gboolean.

	Fixes: MB#4696 (hildon_animation_actor_set_show() gint argument should
	be a gboolean)

2009-09-23  Claudio Saavedra  <csaavedra@igalia.com>

	[2.2.0 Release Candidate 8]

	* NEWS: Updates
	* debian/changelog: update and bump

2009-09-23  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-note.c: Declare hildon_note_set_padding() only when using
	maemo-gtk.

2009-09-23  Claudio Saavedra  <csaavedra@igalia.com>

	* doc/hildon-sections.txt: Add hildon_banner_show_custom_widget()
	* examples/hildon-banner-example.c: (area_expose),
	(custom_widget_new), (on_progress_idle): New example showing a custom widget.
	* hildon/hildon-banner.c:
	* hildon/hildon-banner.h: Add hildon_banner_show_custom_widget().

	Fixes: NB#140140 (Allow custom widgets to be used in banners)

2009-09-18  Claudio Saavedra  <csaavedra@igalia.com>

	* examples/hildon-banner-example.c:
	(on_information_clicked), (on_animation_clicked), 
	(on_progress_clicked): GtkButton:clicked handlers do not return
	gboolean. Fix this.

2009-09-17  Claudio Saavedra  <csaavedra@igalia.com>

	[2.2.0 Release Candidate 7]

	* NEWS: Updates
	* debian/changelog: bump and updates

2009-09-17  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-gtk.c (hildon_gtk_window_take_screenshot):
	Use the Xlib API to take window screenshots, since the GDK API
	doesn't allow us to set the event mask.

	Fixes: NB#138857 (hildon_gtk_window_take_screenshot doesn't take a
	screenshot)

2009-09-14  Claudio Saavedra  <csaavedra@igalia.com>

	[2.2.0 Release Candidate 6]

	* debian/changelog: bump and updates.
