@@ -1,3 +1,12 @@
+2009-09-22  Alejandro G. Castro  <alex@igalia.com>
+
+	* hildon/hildon-pannable-area.c,
+	(hildon_pannable_axis_scroll),
+	(hildon_pannable_area_scroll): Unset the scroll_to in some
+	situations, it was causing the timeout did not stop in some cases.
+
+	Fixes: NB#140186 (HildonPannableArea goes into an infinite loop)
+
 2009-07-02  David King  <davidk@openismus.com>
 
 	* hildon/hildon-animation-actor-private.h
